# butterfly-asyncio

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/butterfly/: __init__.py  __main__.py  app.py  cli.py  config.py  motd.py  pty_manager.py  routes.py  session.py  session_logger.py  ssl_certs.py  themes.py  websocket.py
src/butterfly/static/: index.html
src/butterfly/static/css/: terminal.css
src/butterfly/static/js/: terminal.js
